# llm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: bench_iter_batches.py  log.md
docs/: text-pass.md
exps/: 0630-baseline-100M-3B-climbmix.json  0630-baseline.json  0630-lr.json  0630-warmup-cooldown-100M-3B-climbmix.json  0701-deepseek-v2-lite-hparams-100M-3B-climbmix.json  README.md
scripts/: analyze.py  data.py  parquet.py  process_texts.py  retime_tb.py  text_pass_schema.py  tokenizer.py  tool.py
scripts/tianjiao/: clean_backups.py  run_exp.py
spargel_llm/: bpe.py  data.py  datasets.py  meta.py  text_splitter.py  tokenizer.py  utils.py
spargel_llm/layers/: jax.py  torch.py
spargel_llm/tools/: logging.py  source.py  typing.py  vocab.py
spargel_llm/v1/torch/: model.py  tool.py  utils.py
src/spargel_llm/: data.py  lr_schedule.py  lr_scheduler.py  model.py  parquet_utils.py  text_pass.py  text_splitter.py  tokenizer.py  train.py  typing.py  utils.py
src/spargel_llm/layer/: attention.py  feed_forward.py  positional_encoding.py  rms_norm.py
src/spargel_llm/layers/: torch.py
src/spargel_llm/tools/: utils.py
src/spargel_llm/v1/torch/: utils.py
tests/: test_bpe.py  test_data.py  test_data_source.py  test_lr_schedule.py  test_text_pass.py  test_text_splitter.py  test_tokenizer.py  test_train.py
tests/tianjiao/: test_run_exp.py
