[project]
name = "spargel_llm"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "datasets>=5.0.0",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "regex>=2026.2.19",
    "rich>=15.0.0",
    "tokenizers>=0.23.1",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12"]
build-backend = "uv_build"

[project.optional-dependencies]
jax_cuda12 = ["flax>=0.12.2", "jax[cuda12]>=0.9.0", "optax>=0.2.5"]
matplotlib = ["matplotlib>=3.10.8"]
tensorboard = ["tensorboard>=2.20.0"]
torch_cpu = ["torch>=2.12.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
spargel_llm = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.workspace]
members = ["."]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "ruff>=0.15.2", "spargel_llm"]

[tool.ruff.lint]
extend-select = ["I"]
