[project]
name = "spargel_llm"
version = "0.3.1"
requires-python = ">=3.12"

dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.12.5",
    "regex>=2026.2.19",
    "rich>=15.0.0",
    "tensorboard>=2.20.0",
    "tokenizers>=0.23.1",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "pytest>=9.1.0", "ruff>=0.15.2"]

[project.optional-dependencies]
cpu = ["torch>=2.12.0"]
cu130 = ["torch>=2.12.0"]
cu128 = ["torch==2.10.0+cu128"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "cu130" },
    ],
]


[build-system]
requires = ["uv_build>=0.11.20,<0.12"]
build-backend = "uv_build"
