[project]
name = "spargel_llm"
version = "0.6.4"
requires-python = ">=3.14"

dependencies = [
    "numpy>=2.4.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.12.5",
    "regex>=2026.2.19",
    "rich>=15.0.0",
    "tensorboard>=2.20.0",
    "tokenizers>=0.23.1",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12"]
build-backend = "uv_build"

[project.optional-dependencies]
cpu = ["torch>=2.12.0"]
cu130 = ["torch>=2.12.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
spargel_llm = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
members = ["."]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "pytest>=9.1.0", "ruff>=0.15.20", "spargel_llm"]

[tool.ruff.lint]
extend-select = ["I"]
